libnice (0.1.1-2) UNRELEASED; urgency=low

  * debian/control: Update Vcs-* URL

 -- Laurent Bigonville <bigon@debian.org>  Tue, 20 Dec 2011 11:34:46 +0100

libnice (0.1.1-1) unstable; urgency=low

  * New upstream release.
  * debian/control:
    - Bump Standards-Version to 3.9.2 (no further changes)
    - Make libnice-dev Depends against libglib2.0-dev instead of just
      Recommending it
  * Follow multi-arch specification

 -- Laurent Bigonville <bigon@debian.org>  Tue, 13 Sep 2011 18:28:21 +0200

libnice (0.1.0-2) unstable; urgency=low

  * Add a Breaks: libgstfarsight0.10-0 (<< 0.0.23) for the gstreamer plugin as
    farsight uses one libnice ABI and the gstreamer element uses another
    libnice ABI things tend to go horribly wrong.

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 07 Feb 2011 13:02:37 +0100

libnice (0.1.0-1) experimental; urgency=low

  * New upstream release.
    - Bump soname
    - Update .symbols file
  * debian/control Add libnice-dbg package

 -- Laurent Bigonville <bigon@debian.org>  Sun, 30 Jan 2011 21:07:05 +0100

libnice (0.0.13-1) experimental; urgency=low

  [ Laurent Bigonville ]
  * New upstream release.
  * Bump Standards-Version to 3.9.1 (no further changes)
  * Switch to dpkg-source 3.0 (quilt) format
  * debian/copyright: Fix copyright file

  [ Jonny Lamb ]
  * debian/control: Add Recommends: libglib2.0-dev to
    libnice-dev. (Closes: #592740)

 -- Laurent Bigonville <bigon@debian.org>  Fri, 12 Nov 2010 20:16:13 +0100

libnice (0.0.11-1) unstable; urgency=low

  * New upstream release.
    - debian/libnice0.symbols: Update exported symbols
  * debian/control: Bump Standards-Version (no further changes)

 -- Laurent Bigonville <bigon@debian.org>  Sun, 04 Apr 2010 17:55:41 +0200

libnice (0.0.10-2) unstable; urgency=low

  * Disable check on non-linux arch for now as they are buggy on these arch

 -- Laurent Bigonville <bigon@debian.org>  Fri, 13 Nov 2009 22:53:11 +0100

libnice (0.0.10-1) unstable; urgency=low
